feat: complete CTF with Groq AI integration
- Add Flask web app with 5 vulnerable flags
- Integrate Groq API (Llama 3.3 70B) for LLM responses
- Include mock mode fallback for testing without API
- Add comprehensive README with setup instructions
- Document all 5 prompt injection techniques
- Provide automated solution script

--- a/prompt_injection_ctf/.env
+++ b/prompt_injection_ctf/.env
@@ -1,25 +1,28 @@
 # =============================================================================
 # Prompt Injection CTF Challenge - Environment Configuration
 # =============================================================================
-# Copy this file to .env and fill in your values
-# DO NOT commit .env to version control (it's in .gitignore)
 
-# OpenAI API Configuration
-# Get your API key from: https://platform.openai.com/api-keys
-# Free tier is sufficient for this challenge (~$0.50 total usage)
-OPENAI_API_KEY=sk-1234efghqrstuvwx1234efghqrstuvwx1234efgh
+# Groq API Configuration (RECOMMENDED - Free tier, no credit card required)
+# Get your free API key: https://console.groq.com/keys
+# Free tier: 20 requests/minute, 500K tokens/day
+GROQ_API_KEY=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
+
+# Alternative: Google AI Studio (if you prefer Gemini)
+# Get key: https://aistudio.google.com/app/apikey
+# Note: Requires billing enabled for free tier (1500 requests/day)
+# GEMINI_API_KEY=your_gemini_key_here
+# GEMINI_ENDPOINT=https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent
+
+# Alternative: OpenRouter (multiple free models available)
+# Get key: https://openrouter.ai/keys
+# OPENROUTER_API_KEY=your_openrouter_key_here
 
 # Flask Configuration
-# Generate a random secret key with: python -c "import secrets; print(secrets.token_hex(32))"
 FLASK_SECRET_KEY=s3Fl3Mu4qYz9V1W2R8kXsG5hB0dN7J3X
 
 # Challenge Configuration
 CHALLENGE_MODE=active
 DEBUG=False
-
-# Optional: Local Mode (no API calls needed, uses pre-generated responses)
-# Set to 'true' if you don't have an OpenAI API key
-LOCAL_MODE=false
 
 # Optional: Rate Limiting
 MAX_REQUESTS_PER_MINUTE=10
@@ -30,3 +33,9 @@ DATABASE_PATH=securebank.db
 # Optional: Logging
 LOG_LEVEL=INFO
 LOG_FILE=logs/llm_security.log
+USE_MOCK_MODE=false
+
+# IMPORTANT: Remove or comment out Google Cloud credentials to prevent conflicts
+# GOOGLE_APPLICATION_CREDENTIALS=./documents/turing-reach-418913-dd3f2b389d62.json
+# GOOGLE_CLOUD_PROJECT=turing-reach-418913
+# GOOGLE_CLOUD_LOCATION=us-central1
