--- a/prompt_injection_ctf/.env.example
+++ b/prompt_injection_ctf/.env.example
@@ -5,7 +5,7 @@
 # Groq API Configuration (RECOMMENDED - Free tier, no credit card required)
 # Get your free API key: https://console.groq.com/keys
 # Free tier: 20 requests/minute, 500K tokens/day
-GROQ_API_KEY=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
+GROQ_API_KEY=gotogrokwebsiteandyoucanfindtheretheapikeyandgoodluckfriend(;
 
 # Alternative: Google AI Studio (if you prefer Gemini)
 # Get key: https://aistudio.google.com/app/apikey
@@ -18,7 +18,7 @@ GROQ_API_KEY=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
 # OPENROUTER_API_KEY=your_openrouter_key_here
 
 # Flask Configuration
-FLASK_SECRET_KEY=s3Fl3Mu4qYz9V1W2R8kXsG5hB0dN7J3X
+FLASK_SECRET_KEY=createanysecurestringitwillwork
 
 # Challenge Configuration
 CHALLENGE_MODE=active
@@ -35,7 +35,4 @@ LOG_LEVEL=INFO
 LOG_FILE=logs/llm_security.log
 USE_MOCK_MODE=false
 
-# IMPORTANT: Remove or comment out Google Cloud credentials to prevent conflicts
-# GOOGLE_APPLICATION_CREDENTIALS=./documents/turing-reach-418913-dd3f2b389d62.json
-# GOOGLE_CLOUD_PROJECT=turing-reach-418913
-# GOOGLE_CLOUD_LOCATION=us-central1
+#goodluck just get your api key and it will work :)
